--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ auto.mapper.group=org.andon
 auto.mapper.name=bluetooth_service
 auto.mapper.openCreate=false
 
-logging.level.org.springframework=WARN
+#logging.level.org.springframework=WARN
+#==================== 日志配合·标准  ============================
+logging.config=classpath:logback-boot.xml  
