--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ auto.mapper.openCreate=false
 
 #logging.level.org.springframework=WARN
 #==================== 日志配合·标准  ============================
-#logging.config=classpath:logback-boot.xml
+logging.config=classpath:logback-boot.xml
 
 #server.port=8082
