--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
     </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
-
-  </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
